WorkShop_2.4_Security/policy-default-deny-all.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
spec:
  podSelector:
    matchLabels: {}
    policyTypes:
    - Ingress
    - Egress
